--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
   fastapi:
-    build: .
+    build: ./server
     volumes:
-      - .:/app
+      - ./server:/app
     ports:
       - "8000:8000"
     depends_on:
@@ -16,5 +16,11 @@ services:
       POSTGRES_DB: pcb_inventory
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+  react:
+    build: ./client
+    volumes:
+      - ./client:/app
+    ports:
+      - "3000:3000"
 volumes:
   postgres_data:
