--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   fastapi:
     build:
@@ -26,6 +26,6 @@ services:
     volumes:
       - ./frontend:/app
     ports:
-      - "3000:3000"
+      - "5173:5173"
 volumes:
   postgres_data:
